improving the seo of the page, making the app full spa and fixing the responsive navbar

--- a/public/index.html
+++ b/public/index.html
@@ -4,11 +4,17 @@
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
+    <meta name="theme-color" content="#4fbdba" />
+    <meta name="description" content="Nacho Ramirez portfolio" />
+    <meta name="image" content="%PUBLIC_URL%/og.png" />
+
+    <meta property="og:title" content="Nacho Ramirez" />
+    <meta property="og:description" content="Nacho Ramirez portfolio" />
     <meta
-      name="description"
-      content="Web site created using create-react-app"
+      property="og:image"
+      content="https://nacho-spotify.herokuapp.com/og.png"
     />
+
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -17,8 +23,25 @@
       rel="stylesheet"
     />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-
-    <title>React App</title>
+    <link
+      rel="apple-touch-icon"
+      sizes="180x180"
+      href="%PUBLIC_URL%/apple-touch-icon.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="%PUBLIC_URL%/favicon-32x32.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="16x16"
+      href="%PUBLIC_URL%/favicon-16x16.png"
+    />
+    <link rel="manifest" href="%PUBLIC_URL%/favicons/site.webmanifest" />
+    <title>Nacho Ramirez</title>
   </head>
   <body>
     <div id="root"></div>
